--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+html {
+    font-size: 90%;
+}
